--- a/src/user/onboarding.html
+++ b/src/user/onboarding.html
@@ -5,7 +5,11 @@
         <title>PA Task Manager</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+            <h1>
+                Welcome to PA Task Manager! Please sign in to continue.
+            </h1>
+        </div>
         <script type="module" src="../popup/index.ts"></script>
     </body>
 </html>
