--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -3,7 +3,15 @@
     <head>
         <meta charset="UTF-8" />
         <title>PA Task Manager</title>
+
+        <style>
+  .container {
+    min-width: 500px;
+    max-width: 500px;
+  }
+          </style>
     </head>
+
     <body>
         <div id="app"></div>
         <script type="module" src="./index.ts"></script>
